数据可视化

--- a/demo/dynamic.ipynb
+++ b/demo/dynamic.ipynb
@@ -75,9 +75,17 @@
     "\n",
     "anim = animation.FuncAnimation(fig, update, frames=np.linspace(-np.pi,np.pi, 90),interval=10,\n",
     "                    init_func=init,blit=True)\n",
-    "anim.save('test2.gif',writer='pillow')\n",
+    "# anim.save('test2.gif',writer='pillow')\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6bd8136",
+   "metadata": {},
+   "source": [
+    "![gif](test2.gif)"
    ]
   },
   {
@@ -114,6 +122,14 @@
     "                              interval=25, blit=False)\n",
     "ani.save('test3.gif',writer='pillow')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "740fef9d",
+   "metadata": {},
+   "source": [
+    "![gif](test3.gif)"
    ]
   }
  ],
